# kugou-kgm-decoder

./: .gitignore  Cargo.toml
src/: config.rs  main.rs
src/decoder/: kgg.rs  mod.rs  ncm.rs
src/decoder/crypto/: mod.rs  qmc2.rs  rc4.rs  tea.rs
