[package]
name = "music-decoder"
version = "0.2.0-dev"
authors = ["TanZhou <tanzhou08@qq.com>"]
edition = "2021"
repository = "https://github.com/ghtz08/kuguo-kgm-decoder"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
infer = "0.19.0"
xz2 = "0.1.7"
# NCM 解码依赖
aes = "0.8"
ecb = "0.1"
base64 = "0.22"
# KGG 解码依赖
cbc = "0.1"
md-5 = "0.10"
rusqlite = { version = "0.31", features = ["bundled-sqlcipher"] }
